# CodeReviewAI

./: .coverage  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: endpoints.py
app/core/: config.py  logger.py
app/models/: request_models.py
app/services/: cache_service.py  file_service.py  github_service.py  openai_service.py  repository_service.py
app/utils/: prompt.py
tests/: conftest.py  test_cache_service.py  test_endpoints.py  test_github_service.py  test_openai_service.py  test_repository_service.py
