[tool.poetry]
name = "codereviewai"
version = "0.1.0"
description = "AI-powered code review tool"
authors = ["jpdreamthug <lentorilp@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
httpx = "^0.27.2"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
openai = "^1.53.0"
redis = "^5.2.0"
chardet = "^5.2.0"
black = "^24.10.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
mockito = "^1.5.1"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "app.main:start"
dev = "app.main:dev"
